Fix: scrollbar looks epic

--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,20 @@
     padding: 0;
     box-sizing: border-box;
     font-family: var(--font-family);
+
+    scrollbar-width: thin;
+    scrollbar-color: var(--border-color) transparent;
+}
+
+*::-webkit-scrollbar { 
+    width: 6px; 
+}
+*::-webkit-scrollbar-track { 
+    background: transparent; 
+}
+*::-webkit-scrollbar-thumb { 
+    background: var(--border-color); 
+    border-radius: 10px; 
 }
 
 body {
@@ -355,6 +369,10 @@ body {
     display: flex;
     flex-direction: column;
     gap: 12px;
+    
+    /* Standard Scrollbar for Firefox */
+    scrollbar-width: thin;
+    scrollbar-color: var(--border-color) transparent;
 }
 
 /* Dark Mode Scrollbar */
